// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  className="sc-bxivhb dluWKp"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt=""
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa cysTHt k-Title k-u-align-center k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-htpNat gTscET k-Button k-VerticalCardWithAction__button k-Button--normal k-Button--helium k-Button--andromeda"
      href={null}
      onClick={null}
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  className="sc-bxivhb dluWKp"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt="Image alt"
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa cysTHt k-Title k-u-align-center k-u-margin-bottom-singleHalf--important k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    <p
      className="sc-bwzfXH byuKHQ k-Paragraph k-u-align-center k-u-margin-top-singleHalf--important k-Paragraph--noMargin"
    >
      Custom text
    </p>
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-htpNat gTscET k-Button k-VerticalCardWithAction__button k-Button--normal k-Button--helium k-Button--andromeda"
      href={null}
      onClick={null}
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;
